# InteractiveDigitalPhotomontage

./: CMakeCache.txt  CMakeLists.txt  ConjGrad.h  LoadLib.cpp  Makefile  PhotoMontage.cpp  PhotoMontage.h  PoissonImageEditing.pro  README.md  ReadMe.txt  cmake_install.cmake  main.cpp  project  stdafx.h
Eigen/src/IterativeLinearSolvers/: ConjugateGradient.h
PhotoMontage/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PhotoMontage.vcxproj  ReadMe.txt  cmake_install.cmake  finish.txt  image.cpp  image.h  imageeditor.cpp  imageeditor.h  imageeditor.ui  index.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  project  ui_imageeditor.h  ui_mainwindow.h
PhotoMontage/project_autogen/: mocs_compilation.cpp
PhotoMontage/project_autogen/EWIEGA46WW/: moc_imageeditor.cpp  moc_mainwindow.cpp
PhotoMontage/project_autogen/include/: ui_imageeditor.h  ui_mainwindow.h
PhotoMontage_cml_v0/: CMakeLists.txt  Makefile  PhotoMontage.cpp  PhotoMontage.h  cmake_install.cmake  main.cpp  main_tmp.cpp  stdafx.cpp
PhotoMontage_cml_v0/归档/: PhotoMontage.cpp  PhotoMontage.h  main.cpp  param.txt
PhotoMontage_cml_v1/: .gitignore  CMakeCache.txt  ConjGrad.cpp  GCoptimization.h  Makefile  PhotoMontage.cpp  PhotoMontage.h  PhotoMontage.vcxproj.filters  ReadMe.txt  cmake_install.cmake  finish.txt  main.cpp  param.txt  project_cml
build-PhotoMontage-Desktop_Qt_5_8_0_clang_64bit-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  finish.txt  index.txt  project  project.cbp  project_cml
build-PhotoMontage-Desktop_Qt_5_8_0_clang_64bit-Default/project_autogen/: moc_compilation.cpp
(+5 files in other folders)
